# tictactoe-maral

./: CMakeLists.txt  main.cpp
src/: tictactoe.cpp  tictactoe.hpp
tests/: tictactoe_test.cpp
